# spotify-to-ytmusic

./: .gitignore  README.md  cache.json  pyproject.toml  requirements.txt
spotify2yt/: cli.py  conection_test.py  spotify_client.py  ytmusic_client.py
